-Changed absolute DirectoryReference to relative DirectoryReference

--- a/MyChatApp/MyChatApp.csproj
+++ b/MyChatApp/MyChatApp.csproj
@@ -29,4 +29,16 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Icons\black-circle.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Icons\blackcircle.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="ProfilePictures\DefaultProfilePicture.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
