--- a/MyChatApp/MyChatApp.csproj
+++ b/MyChatApp/MyChatApp.csproj
@@ -40,4 +40,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
